added locations and items

--- a/TextRPG_Assignment/TextRPG_Assignment.vcxproj
+++ b/TextRPG_Assignment/TextRPG_Assignment.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CharacterCreator.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Location.cpp" />
     <ClCompile Include="TextRPG_Assignment.cpp" />
