--- a/TextRPG_Assignment/TextRPG_Assignment.vcxproj.filters
+++ b/TextRPG_Assignment/TextRPG_Assignment.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="CharacterCreator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Enemy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CharacterCreator.h">
