--- a/TextRPG_Assignment/TextRPG_Assignment.vcxproj.filters
+++ b/TextRPG_Assignment/TextRPG_Assignment.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="Item.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TextTools.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
